# nixos-core

./: .gitignore  .taplo.toml  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  cross-build.yml  rust.yml  vm-tests.yml
crates/activation-common/: Cargo.toml
crates/activation-common/src/: lib.rs
crates/init-script/: Cargo.toml
crates/init-script/src/: lib.rs
crates/setup-etc/: Cargo.toml
crates/setup-etc/src/: lib.rs
crates/stage1/: Cargo.toml
crates/stage1/src/: lib.rs
crates/stage2/: Cargo.toml  README.md
crates/stage2/src/: bash_compat.rs  cli.rs  common.rs  lib.rs  nixos_init_compat.rs
crates/update-users-groups/: Cargo.toml
crates/update-users-groups/src/: lib.rs
docs/: etc.md
nix/: package.nix  shell.nix
nix/checks/: common.nix  default.nix
nix/modules/: nixos.nix
nix/tests/: mutable-users.nix
nix/vm-tests/: bcachefs-root.nix  bcachefs.nix  boot.nix  etc.nix  fs.nix  loopmount.nix  mutable-users-hashedPassword.nix  rebuild.nix  specialfs.nix  systemd-initrd.nix  users.nix
nixos-core/: Cargo.toml
nixos-core/src/: main.rs
