[package]
name                   = "activation-common"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description            = "Common utilities for NixOS activation scripts"

[dependencies]
anyhow.workspace = true
nix.workspace    = true
