[package]
name                   = "init-script"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description            = "NixOS generic init script builder"

[dependencies]
anyhow.workspace = true
clap.workspace   = true
