[package]
name                   = "setup-etc"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description            = "NixOS /etc static setup"

[lib]
name = "setup_etc"
path = "src/lib.rs"

[dependencies]
anyhow.workspace    = true
clap.workspace      = true
libc.workspace      = true
log.workspace       = true
serde_json.workspace = true
smfh-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
