[package]
name                   = "stage1"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description            = "NixOS stage 1 initrd bootstrap"

[dependencies]
anyhow.workspace = true
libc.workspace   = true
nix.workspace    = true
