[package]
name                   = "update-users-groups"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description            = "NixOS user and group management"

[dependencies]
activation-common    = { path = "../activation-common" }
anyhow.workspace     = true
chrono.workspace     = true
clap.workspace       = true
libc.workspace       = true
pwhash.workspace     = true
rand.workspace       = true
serde.workspace      = true
serde_json.workspace = true
