[package]
name                   = "update-users-groups"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description            = "NixOS user and group management"

[dependencies]
anyhow.workspace     = true
clap.workspace       = true
libc.workspace       = true
serde.workspace      = true
serde_json.workspace = true
sha-crypt.workspace  = true
